<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">Matka Wala</string>
    <string name="okay">Okay</string>
    <string name="uhoh">Network Problem</string>
    <string name="no_internet_found">Please check your internet connection</string>
    <string name="please_confirm">Please Confirm</string>
    <string name="please_grant_permission">Please Grant Camera and Storage Permission</string>
    <string name="grant">Grant</string>
    <string name="default_notification_channel">Matka Channel Id</string>
    <string name="retry">Retry</string>
    <string name="continue_">Continue</string>
    <string name="p_r_o_c_e_e_d">P r o c e e d</string>
    <string name="submit">Submit</string>
    <string name="how_to_play">How To Play</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to">Welcome to</string>
    <string name="str_matkawala">Matkawala</string>
    <string name="welcome1">Welcome!</string>
    <string name="enter_your">Enter Your</string>
    <string name="otp_enter">Please type the verification code \n\n Mobile Number</string>
    <string name="otp_enter_2">Please type the verification code Sent to </string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number_d">Enter Mobile Number</string>
    <string name="customer_care">Customer care :&#160;</string>
    <string name="numer">&#160;9158396275</string>
    <string name="customer_service">Customer Service :&#160;</string>
    <string name="timings">09:00AM To 10:00PM</string>
    <string name="e_mai">E-mail :&#160;</string>
    <string name="onlinematkasaga_gmail_com">onlinematkasaga@gmail.com</string>
    <string name="something_went_wrong">Something went wrong! We are looking forward to fix this as soon as possible</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_phone">Forgot Mobile Number?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_new">Forgot Password?</string>
    <string name="enter_mobile_number">Enter the mobile number</string>
    <string name="mobie_number_must_be_ten_digit">Mobile number must be 10-digit</string>
    <string name="please_enter_the_password">Please enter the password</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="login_text">Login</string>
    <string name="referral_code_optional">Referral Code (Optional)</string>
    <string name="enter_confirm_password">Please enter the confirm password</string>
    <string name="password_confirm_do_not_match">Password and Confirm Password do not match</string>
    <string name="password_must_be_five_chars">Password must be atleast 5 characters long</string>
    <string name="an_otp_has_been_sent">An OTP Has Been Sent</string>
    <string name="four_digit_otp">4 Digit OTP</string>
    <string name="six_digit_otp">6 Digit OTP</string>
    <string name="an_otp_has_been_sent_to_your_registered_mobile_number_please_verify_the_same_to_continue">An OTP has been sent to your mobile number, please verify the same to continue.</string>
    <string name="verification_successful">Verification Successful</string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="enter_four_digit_otp">Please enter the 4-digit OTP</string>
    <string name="instant_online_matka">Matka Wala</string>
    <string name="register_successful">Successfully \n\n Account Created</string>
    <string name="send_otp">Send OTP</string>
    <string name="mobile_number_required">Mobile Number Required</string>
    <string name="please_enter_your_registered_mobile_number_and_click_on_send_otp_to_receive_an_otp">Please enter your registered mobile number and click on SEND OTP to receive an OTP</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_verified_successfully">OTP has been verified successfully. You can now reset your password</string>
    <string name="successful">Success</string>
    <string name="invalid_otp">You have entered an invalid OTP, Please try again</string>
    <string name="password_reset_successful">Your password has been reset successfully</string>
    <string name="invalid_password">You have entered a wrong password. Please erify you password and try again</string>
    <string name="i_have_a_referral_code">I have a referral code</string>
    <string name="mobile_number_invalid">The mobile Number you have entered does not exist. Please verify and try again</string>
    <string name="make_your_selection">Make your selection</string>
    <string name="header_description">Header Description</string>
    <string name="personal_panel">Personal Panel</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="account_statement">Account Statement</string>
    <string name="bidding">Bidding</string>
    <string name="bidding_history">Bidding History</string>
    <string name="funds">Funds</string>
    <string name="add_funds">Add Funds</string>
    <string name="withdraw_funds">Withdraw Funds</string>
    <string name="help_and_support">Help and Support</string>
    <string name="game_rates">Game Rates</string>
    <string name="notice_boards">Notice Boards</string>
    <string name="invite_and_earn">Invite and Earn</string>
    <string name="contact_us">Contact Us</string>
    <string name="sign_out">Sign Out</string>
    <string name="accounts">Accounts</string>
    <string name="profile">Profile</string>
    <string name="refer">Refer</string>
    <string name="more">More</string>
    <string name="market">Market</string>
    <string name="deposit_history">Deposit History</string>
    <string name="withdraw_history">Withdraw History</string>
    <string name="starline">Starline</string>
    <string name="ratan_starline_games">Kalayan Starline</string>
    <string name="quit">Quit</string>
    <string name="no_deposit_history">No deposit history found</string>
    <string name="no_withdraw_history">No withdraw history found</string>
    <string name="no_game_list_found_in_the_market">No game list found in the market</string>
    <string name="bidding_is_closed_for_today">Bidding is Closed</string>
    <string name="bidding_is_running_for_today">Bidding is Running</string>
    <string name="bidding_is_running_for_close_bids">Bidding is running for close bids</string>
    <string name="market_name">Market Name</string>
    <string name="play_on">PLAY ON :</string>
    <string name="play_for">PLAY FOR :</string>
    <string name="bid_id">Bid Id</string>
    <string name="digit">Digit</string>
    <string name="points">Points</string>
    <string name="bid_time">Bid Time :</string>
    <string name="select_market_name">Select Market Name</string>
    <string name="choose_market_name">Choose Market Name</string>
    <string name="no_bidding_history_available_at_the_moment">No bidding history available at the moment</string>
    <string name="congratulations">You won</string>
    <string name="results_not_announced">Results Not\nAnnounced</string>
    <string name="better_luck_next_time">You Lost</string>
    <string name="confirm">Confirm</string>
    <string name="do_you_want_to_close">Are you ready to close Matka Wala?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="play_ratan_starline_games">PLAY RATAN STARLINE GAMES</string>
    <string name="ratan_starline_game">RATAN STARLINE GAME</string>
    <string name="ratan_starline_bid_history">Bid History</string>
    <string name="ratan_starline_result_history">Result History</string>
    <string name="terms_and_conditions">Terms &amp; Conds</string>
    <string name="game_win_ratio">Game Win Ratio</string>
    <string name="no_starline_games_available_at_this_moment">No starline games available at this moment</string>
    <string name="total_winning_amount_graph">Total Winning Amount Graph</string>
    <string name="bonuses">Bonus Winnings</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="select_from_gallary">Select From Gallery</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="profile_picture_updated">Profile Picture Was Updated\n\nSuccessfully</string>
    <string name="add_money_to_matka_balance">Add Money to Matka Balance</string>
    <string name="add_cash_to_matka_balance">Add cash to your account</string>
    <string name="amount_to_add">Amount to add</string>
    <string name="minimum_deposit">Minimum Deposit ₹ : 500</string>
    <string name="enter_the_amount">Enter the Amount</string>
    <string name="enter_amountt">Enter Amount</string>
    <string name="minimum_withdrawal">Minimum Withdrawal ₹ : 1000</string>
    <string name="your_winning">Your Winnnigs</string>
    <string name="minimum_amount">0</string>
    <string name="note">Note : </string>
    <string name="note_message">After deposit, our deposit team add your points in 5-10 minutes</string>
    <string name="withdrawal_request_can_be_accepted_anytime">Withdrawal Request Can Be Accepted Anytime</string>
    <string name="the_amount_will_be_credited_to_your_bank_within_4_hours">The Amount will be Credited to your Bank within 24 hours</string>
    <string name="withdraw_is_not_applicable_on_sundays_and_holidays">Withdraw is not applicable on Sundays and Holidays</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="submit_withdraw_request">Submit Withdraw Request</string>
    <string name="withdraw_now">Withdraw Now</string>
    <string name="no_bank_details_found">No bank details are found. Do you want to add the bank details now?</string>
    <string name="proceed">Proceed</string>
    <string name="please_enter_an_amount_to_withdraw">Please enter an amount to withdraw</string>
    <string name="withdrawal_amount_must_be">Withdrawal Amount must be 1000 or more</string>
    <string name="sending_money_from_wallet_to">Sending money from wallet to</string>
    <string name="withdrawal_amount">Withdrawal Amount :</string>
    <string name="charges_2">Charges (2%):</string>
    <string name="total_withdrawal_amount">Total Withdrawal Amount :</string>
    <string name="by_proceeding_i_agree_to_the_additional_charges_applicable_on_this_transaction">By proceeding, I agree to the additional charges applicable on this transaction</string>
    <string name="insufficient_balance">Insufficient Balance</string>
    <string name="request_successful">Your Request Has Been Sent \n\nSuccessfully</string>
    <string name="for_every_friend_that_plays_you_earn_5_on_invite">For every friend that plays, you earn 5% on invite</string>
    <string name="share_your_invite_code">Share Your Code</string>
    <string name="kick_off_your_friend_s_online_matka_journey">Kick off your friend\'s matka wala journey!</string>
    <string name="more_options">More Options</string>
    <string name="notice_board">Notice Board</string>
    <string name="no_account_statement_found_at_this_moment">No account statement found at this moment</string>
    <string name="referral_fund_added">Refer fund added in your wallet</string>
    <string name="bonus_points">Bonus Points</string>
    <string name="points_added_in_the_wallet">Points Added in your wallet</string>
    <string name="your_withdrawal_amount">Your withdrawal amount</string>
    <string name="you_won_this_game">You Won this game</string>
    <string name="refund_points">Refund Points</string>
    <string name="index">Index</string>
    <string name="digits">Digits</string>
    <string name="game_mode">Game Mode</string>
</resources>