<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/constraintLayout20"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/constraintLayout3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:visibility="gone"
        android:id="@+id/lblIndexAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/index"
        android:textAllCaps="true"
        android:textColor="@color/Gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblPointsAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblDigitsAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/digits"
        android:textAllCaps="true"
        android:textColor="@color/Gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lblPointsAnswer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblModeAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblPointsAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:gravity="center"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/points"
        android:textAllCaps="true"
        android:textColor="@color/Gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/lblIndexAnswer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lblDigitsAnswer"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblModeAnswer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/mont_semi_bold"
        android:gravity="center"
        android:text="@string/game_mode"
        android:textAllCaps="true"
        android:textColor="@color/Gray"
        android:textSize="12sp"
        android:textStyle="bold"


        app:layout_constraintEnd_toStartOf="@+id/lblDigitsAnswer"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>