<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_header_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ir.alirezabdn.wp7progress.WP7ProgressBar
        android:id="@+id/wp7progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:animationDuration="2000"
        app:indicatorColor="@color/colorPrimaryDark"
        app:indicatorHeight="7"
        app:indicatorRadius="5"
        app:interval="100"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLogin1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome1"
        android:visibility="gone"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLogin2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/forgot_password_new"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/lblLogin3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/montserrat"
        android:text="Please Enter your mobile number"
        android:textColor="@color/Gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="gone"
            android:id="@+id/imgPhone"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_phone_gray" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/txtMobileNumber"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/helvetica"
            android:hint="@string/mobile_number"
            android:maxLines="1"
            android:textColor="@color/Black"
            android:textSize="16sp"
            android:inputType="number"
            android:maxLength="10"

            app:backgroundTint="@color/Gray"
             android:shadowColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgPhone"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:visibility="gone"
            android:id="@+id/lblLogin4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txtMobileNumber"
            app:layout_constraintTop_toBottomOf="@+id/txtMobileNumber"  />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnProceed"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/btn_red_new"
        android:fontFamily="@font/montserrat"
        android:text="@string/send_otp"
        android:textAllCaps="false"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="end"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btnProceed"
        app:layout_constraintTop_toBottomOf="@+id/btnProceed">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lblPlayGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/how_to_play"
            android:textColor="@color/Gray"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btnPlayGame"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnPlayGame" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlayGame"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="start"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:visibility="gone"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sc"
                android:text="@string/customer_care"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHelpLineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numer"
                android:textColor="@color/Black"
                android:fontFamily="@font/myriadpro"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sc"
                android:gravity="center"
                android:text="@string/customer_service"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHelpingHrs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timings"
                android:textColor="@color/Black"
                android:fontFamily="@font/myriadpro"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alegreya_sc"
                android:text="@string/e_mai"
                android:textColor="@color/Black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEmailId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:text="@string/onlinematkasaga_gmail_com"
                android:textColor="@color/Black"
                android:fontFamily="@font/myriadpro"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>